# contracts

./: .gitignore  Makefile  Readme.md  deploy-testnet-suite-resume.sh  deploy-testnet-suite.sh  deploy-testnet.sh  deployed-contracts-testnet.json  testnet-suite.env  testnet-suite.json  upgrade-adapters.sh
contracts/: Cargo.toml
contracts/account/: Cargo.toml
contracts/account/src/: lib.rs
contracts/account_deployer/: Cargo.toml
contracts/account_deployer/src/: lib.rs
contracts/adapter-interface/: Cargo.toml
contracts/adapter-interface/src/: lib.rs
contracts/adapters/aqua/src/: event.rs  lib.rs  protocol.rs
contracts/adapters/comet/src/: event.rs  lib.rs  protocol.rs
contracts/adapters/phoenix/src/: event.rs  lib.rs  protocol.rs
contracts/adapters/soroswap/src/: lib.rs  protocol.rs  storage.rs
contracts/common/src/: lib.rs
contracts/router/src/: lib.rs
docs/: README.md  diagram.md
hoops-contracts/: Cargo.toml  README.md  REVIEW-vs-StellarBroker.md  TODO.md  get-contracts.sh  readme.md
hoops-contracts/account/: Cargo.toml  README.md
hoops-contracts/account/src/: lib.rs  test.rs  verify.rs
hoops-contracts/account_deployer/: README.md
hoops-contracts/account_deployer/src/: lib.rs
hoops-contracts/adapter-interface/: Cargo.toml  README.md
hoops-contracts/adapter-interface/src/: lib.rs
hoops-contracts/adapters/aqua/: Cargo.toml  README.md
hoops-contracts/adapters/aqua/src/: event.rs  lib.rs  protocol.rs  storage.rs
hoops-contracts/adapters/comet/: Cargo.toml  README.md
hoops-contracts/adapters/comet/src/: event.rs  lib.rs  protocol.rs  storage.rs
hoops-contracts/adapters/phoenix/: Cargo.toml  README.md
hoops-contracts/adapters/phoenix/src/: event.rs  lib.rs  protocol.rs  storage.rs
hoops-contracts/adapters/soroswap/: Cargo.toml  README.md
hoops-contracts/adapters/soroswap/src/: event.rs  lib.rs  protocol.rs  storage.rs
hoops-contracts/bytecodes/: aqua_adapter.wasm  aqua_locker_feed.wasm  aqua_soroban_fees_collector_contract.wasm  aqua_soroban_liquidity_pool_contract.wasm  aqua_soroban_liquidity_pool_liquidity_calculator_contract.wasm  aqua_soroban_liquidity_pool_plane_contract.wasm  aqua_soroban_liquidity_pool_provider_swap_fee_contract.wasm  aqua_soroban_liquidity_pool_provider_swap_fee_factory_contract.wasm  aqua_soroban_liquidity_pool_router_contract.wasm  aqua_soroban_liquidity_pool_stableswap_contract.wasm  aqua_token_share.wasm  comet-factory.wasm  comet-pool.wasm  comet_adapter.wasm  comet_factory.wasm  comet_pool.wasm  factory.wasm  hoops_account.wasm  hoops_account_deployer.wasm  hoops_adapter_interface.wasm  hoops_router.old  hoops_router.wasm  hoops_router_optimized.wasm  locker_feed.wasm  phoenix_adapter.wasm  phoenix_factory.wasm  phoenix_multihop.wasm  phoenix_pool.wasm  phoenix_pool_stable.wasm  phoenix_stake.wasm  phoenix_trader.wasm  phoenix_vesting.wasm  soroban_fees_collector_contract.wasm  soroban_liquidity_pool_contract.wasm  soroban_liquidity_pool_liquidity_calculator_contract.wasm  soroban_liquidity_pool_plane_contract.wasm  soroban_liquidity_pool_provider_swap_fee_contract.wasm  soroban_liquidity_pool_provider_swap_fee_factory_contract.wasm  soroban_liquidity_pool_router_contract.wasm  soroban_liquidity_pool_stableswap_contract.wasm  (+9 more)
hoops-contracts/common/: Cargo.toml  README.md
hoops-contracts/common/src/: lib.rs  types.rs
hoops-contracts/external_contracts/aqua/access_control/: Cargo.toml
hoops-contracts/external_contracts/aqua/access_control/src/: emergency.rs  management.rs  transfer.rs
hoops-contracts/external_contracts/aqua/fees_collector/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/integration_tests/: Cargo.toml
hoops-contracts/external_contracts/aqua/liquidity_pool/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/liquidity_pool_events/: Cargo.toml
hoops-contracts/external_contracts/aqua/liquidity_pool_liquidity_calculator/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/liquidity_pool_plane/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/liquidity_pool_provider_swap_fee/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/liquidity_pool_provider_swap_fee_factory/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/liquidity_pool_router/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/liquidity_pool_stableswap/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/liquidity_pool_validation_errors/: Cargo.toml
hoops-contracts/external_contracts/aqua/locker_feed/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/rewards/: Cargo.toml
hoops-contracts/external_contracts/aqua/token/: Cargo.toml  Taskfile.yaml
hoops-contracts/external_contracts/aqua/token_share/: Cargo.toml
hoops-contracts/external_contracts/aqua/upgrade/: Cargo.toml
hoops-contracts/external_contracts/aqua/utils/: Cargo.toml
hoops-contracts/external_contracts/comet/factory/: Cargo.toml
hoops-contracts/external_contracts/comet/pool/: Cargo.toml
hoops-contracts/external_contracts/phoenix/factory/: Cargo.toml  Makefile
hoops-contracts/external_contracts/phoenix/multihop/: Cargo.toml  Makefile
hoops-contracts/external_contracts/phoenix/pool/: Cargo.toml  Makefile
hoops-contracts/external_contracts/phoenix/pool_stable/: Cargo.toml  Makefile
hoops-contracts/external_contracts/phoenix/stake/: Cargo.toml  Makefile
hoops-contracts/external_contracts/phoenix/token/: Cargo.toml  Makefile
hoops-contracts/external_contracts/phoenix/trader/: Makefile
hoops-contracts/external_contracts/phoenix/vesting/: Makefile
hoops-contracts/external_contracts/soroswap/router/: Cargo.toml  Makefile
hoops-contracts/router/: Cargo.toml  README.md
hoops-contracts/router/src/: client.rs  lib.rs  storage.rs  types.rs
hoops-contracts/router/src/tests/: adapter_liquidity_tests.rs  adapter_smoke_tests.rs  aqua_adapter_tests.rs  comet_adapter_tests.rs  mod.rs  phoenix_adapter_tests.rs  setuputils.rs  soroswap_adapter_tests.rs  test_setup.rs  testlog.md
(+269 files in other folders)
