[package]
name    = "hoops-router"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk              = { workspace = true, features = ["testutils"] }
hoops-common             = { path = "../common" }
hoops-adapter-interface  = { path = "../adapter-interface" }
