[package]
name    = "hoops-router"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk              = { workspace = true }
hoops-common             = { path = "../common" }
hoops-adapter-interface  = { path = "../adapter-interface" }
aqua_token_share = { path = "../external_contracts/aqua/token_share" }

[dev-dependencies]
soroban-sdk              = { workspace = true, features = ["testutils"] }
aqua_soroban_liquidity_pool_router_contract = { path = "../external_contracts/aqua/liquidity_pool_router" }
