[package]
name    = "aqua-adapter"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk             = { workspace = true }
hoops-common            = { path = "../../common" }
hoops-adapter-interface = { path = "../../adapter-interface" }
soroban-fixed-point-math = { workspace = true }

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
