[package]
name        = "soroswap-adapter"
version     = "0.1.0"
edition     = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk            = { workspace = true }
hoops-adapter-interface = { path = "../../adapter-interface" }
hoops-common            = { path = "../../common" }
