[package]
name = "aqua_access_control"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
aqua-utils = { path = "../utils" }
aqua-liquidity-pool-validation-errors = { path = "../liquidity_pool_validation_errors" }

[dev-dependencies]
aqua-utils = { path = "../utils", features = ["testutils"] }