[package]
name = "aqua-soroban-fees-collector-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
aqua_access_control = { path = "../access_control" }
aqua-upgrade = { path = "../upgrade" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
