[package]
name = "soroban-liquidity-pool-provider-swap-fee-contract"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
paste = { workspace = true }
utils = { path = "../utils" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { path = "../utils", features = ["testutils"] }
