[package]
name = "aqua_soroban-liquidity-pool-provider-swap-fee-contract"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
paste = { workspace = true }
aqua-utils = { path = "../utils" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
aqua-utils = { path = "../utils", features = ["testutils"] }
