[package]
name = "aqua-soroban-liquidity-pool-provider-swap-fee-factory-contract"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
aqua_access_control = { path = "../access_control" }
aqua-upgrade = { path = "../upgrade" }
paste = { workspace = true }
aqua-utils = { path = "../utils" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
aqua-utils = { path = "../utils", features = ["testutils"] }
