[package]
name = "aqua_soroban_liquidity_pool_router_contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
paste = "1.0.14"
aqua_access_control = { path = "../access_control" }
aqua-utils = { path = "../utils" }
aqua_rewards = { path = "../rewards" }
aqua_token_share = { path = "../token_share" }
aqua-liquidity-pool-validation-errors = { path = "../liquidity_pool_validation_errors" }
aqua-upgrade = { path = "../upgrade" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
aqua-utils = { workspace = true, features = ["testutils"] }
