[package]
name = "aqua-soroban-liquidity-pool-stableswap-contract"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
aqua_access_control = { path = "../access_control" }
aqua_rewards = { path = "../rewards" }
aqua_token_share = { path = "../token_share" }
aqua-utils = { path = "../utils" }
paste = { workspace = true }
aqua-liquidity-pool-validation-errors = { path = "../liquidity_pool_validation_errors" }
aqua-liquidity-pool-events = { path = "../liquidity_pool_events" }
soroban-fixed-point-math = { workspace = true }
aqua-upgrade = { path = "../upgrade" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
aqua-utils = { path = "../utils", features = ["testutils"] }
