[package]
name = "aqua-locker-feed"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
aqua_access_control = { path = "../access_control" }
aqua-upgrade = { path = "../upgrade" }
paste = { workspace = true }
aqua-utils = { path = "../utils" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
