[package]
name = "rewards"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
utils = { path = "../utils" }
soroban-fixed-point-math = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { path = "../utils", features = ["testutils"] }
