[package]
name = "soroban-token-contract-aqua"
description = "Soroban standard token contract"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
access_control = { path = "../access_control" }
utils = { path = "../utils" }
upgrade = { path = "../upgrade" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { path = "../utils", features = ["testutils"] }
