[package]
name = "soroban-token-contract-aqua"
description = "Soroban standard token contract"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
aqua_access_control = { path = "../access_control" }
aqua-utils = { path = "../utils" }
aqua-upgrade = { path = "../upgrade" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
aqua-utils = { path = "../utils", features = ["testutils"] }
