[package]
name = "comet-pool"
description = "Comet Contracts"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-fixed-point-math = { workspace = true }
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sep-41-token = { version = "1.0.0", features = ["testutils"] }
