[package]
name = "soroswap-router"
version = "0.0.1"
edition = "2021"
description = "Swap of tokens when a direct pair does not exist, by using a given paths. It will also handle liquidity provision and manage deposit and withdrawal functions for liquidity providers within the Soroswap ecosystem."
homepage = "https://github.com/soroswap/core/tree/main/contracts/router"
repository = "https://github.com/soroswap/core/tree/main/contracts/router"
authors = ["esteblock <esteblock@paltalabs.io>"]
readme = "README.md"
keywords = ["no_std", "wasm", "soroswap", "amm", "soroban"]
publish = true



[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
num-integer = { workspace=true, default-features = false, features = [
  "i128",
] }
soroswap-library = { path = "../library" }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
